# AE

./: CMakeLists.txt  fix_all_errors.sh  fix_build.sh  fix_everything.sh  fix_typo.sh  generate_sources.sh
.devcontainer/: devcontainer.json
ares_edge_system/: .gitignore  CMakeLists.txt  CMakeLists.txt.full  CMakeLists_optimized.txt  OPTIMIZATION_REPORT.md  README.md  SECURITY_PRODUCTION_CHECKLIST.md  ares_cpu_demo.cpp  ares_demo  ares_edge_system.cpp  ares_edge_system_optimized.cpp  ares_edge_system_optimized_original.cpp  ares_edge_system_original.cpp  build.sh  main.cpp  main_optimized.cpp  unified_quantum_ares.cpp
ares_edge_system/backscatter/src/: backscatter_communication_system.cpp.original
ares_edge_system/cew/include/: cew_adaptive_jamming.h  spectrum_waterfall.h  threat_classifier_cnn.h
ares_edge_system/cew/kernels/: adaptive_jamming_kernel_optimized.cu  spectrum_waterfall_kernel.cu
ares_edge_system/cew/src/: cew_adaptive_jamming.cpp  cew_adaptive_jamming_stub.cpp  spectrum_waterfall.cpp  spectrum_waterfall_stub.cpp
ares_edge_system/common/include/: ares_cuda_fixes.h  cuda_helpers.h
ares_edge_system/core/: quantum_core.cu  quantum_resilient_core.cpp
ares_edge_system/countermeasures/src/: chaos_induction_engine.cuh  cublas_helpers.cuh  last_man_standing_coordinator_patch.cuh  self_destruct_protocol.cuh  thrust_helpers.cuh
ares_edge_system/cyber_em/include/: em_cyber_structs.cuh  initialize_random_states.cuh  lightweight_structs.cuh
ares_edge_system/cyber_em/src/: em_cyber_controller.cpp
ares_edge_system/digital_twin/include/: predictive_simulation_engine.h  realtime_state_sync.h
ares_edge_system/digital_twin/kernels/: physics_simulation_kernels.cu
ares_edge_system/docker/: Dockerfile.cuda  docker-compose.yml
ares_edge_system/neuromorphic/include/: loihi2_spike_encoding.h
ares_edge_system/orchestrator/: drpp_chronopath_engine.cpp
ares_edge_system/python/: ares_quantum_core.py
ares_edge_system/swarm/include/: byzantine_consensus_engine.h  distributed_task_auction.h
ares_edge_system/tests/: integration_tests.cpp  performance_benchmarks.cu  test_cew_performance.cpp  test_chaos_engine.cpp
ares_edge_system/unreal/ARESEdgePlugin/Source/ARESEdgePlugin/: ARESEdgePlugin.Build.cs
cryptopp/: ecdsa.h  ecdsa_stub.h
g2o/core/: base_edge.h  base_vertex.h  block_solver.h  block_solver_traits.h  optimizable_graph.h  optimization_algorithm.h  optimization_algorithm_levenberg.h  sparse_optimizer.h
g2o/solvers/dense/: linear_solver_dense.h
g2o/types/slam3d/: edge_se3.h  se3quat.h  vertex_se3.h
pcl/: point_cloud.h  point_types.h
pcl/features/: feature.h  fpfh.h  normal_3d.h
pcl/filters/: voxel_grid.h
pcl/registration/: icp.h
pcl/search/: kdtree.h
seal/: seal.h
